log
Thu Apr 30 08:02:57 PM UTC 2026: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  3|7
total_score: 5/60
e4f9b69
Thu Apr 30 08:12:16 PM UTC 2026: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:127:12: error: implicit declaration of function ‘lower_than’ [-Wimplicit-function-declaration]
  127 |         if(lower_than(aux -> pair -> key, aux -> parent -> pair -> key) == 1){
      |            ^~~~~~~~~~
e34495f
Thu Apr 30 08:13:13 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 8/60
2cd24fb
Thu Apr 30 08:14:36 PM UTC 2026: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|7
total_score: 8/60
4307a5b
Thu Apr 30 08:14:57 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 8/60
047b5eb
Thu Apr 30 08:18:26 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|6
total_score: 15/60
bd245fe
Thu Apr 30 08:39:10 PM UTC 2026: 
 tests:  8|6
total_score: 15/60
20ed9bd
